--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -13,7 +13,7 @@ IMPL += lib/syntax/pa_js.cmx lib/syntax/pa_js.cmxs
 endif
 endif
 
-OTHERS := runtime/runtime.js runtime/weak.js runtime/unix.js runtime/classlist.js
+OTHERS := runtime/runtime.js runtime/weak.js runtime/unix.js runtime/classlist.js runtime/bigarray.js
 
 COMP_INTF := compiler/compiler.cmi
 COMP_IMPL := compiler/compiler.cma
