--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -2,7 +2,7 @@
 include ../Makefile.conf
 
 COMP=../compiler/$(COMPILER)
-JSFILES=../runtime/runtime.js ../runtime/unix.js file/unix.js
+JSFILES=../runtime/runtime.js file/unix.js
 OCAMLC=ocamlfind ocamlc -package lwt,deriving -ppopt ../lib/syntax/pa_js.cmo -ppopt ../lib/syntax/pa_deriving_Json.cmo -I ../lib -I ../lib/deriving_json
 STDLIB=$(LIBNAME).cma
 
