--- a/examples/wiki/Makefile
+++ b/examples/wiki/Makefile
@@ -1,4 +1,4 @@
-OBJS=wikicreole.cmo wiki_syntax.cmo main.cmo
+OBJS=test.cmo wikicreole.cmo wiki_syntax.cmo main.cmo
 NAME=wiki
 OPTIONS=-pretty
 
@@ -7,7 +7,7 @@ include ../Makefile.common
 wikicreole.ml: wikicreole.mll
 	ocamllex $<
 
-main.cmo: wiki_syntax.cmo
+main.cmo: test.cmo wiki_syntax.cmo
 wiki_syntax.cmo: wikicreole.cmo
 
 clean::
