Compiler: allow to specify path for included files

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -69,7 +69,7 @@ PERVASIVES=$(STDLIB_MODULES) outcometree topdirs toploop
 #	ocamlfind ocamlc -linkall -g -package str -linkpkg toplevellib.cma -o $@.tmp $^
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES) examples.ml
-	$(COMP) -I $(shell ocamlc -where)/compiler-libs -toplevel -noinline -noruntime $(JSFILES) $(NAME).byte $(OPTIONS) -I ./ -file examples.ml
+	$(COMP) -I $(shell ocamlc -where)/compiler-libs -toplevel -noruntime $(JSFILES) $(NAME).byte $(OPTIONS) -I ./ -file examples.ml
 
 $(NAME).byte: $(OBJS) ../compiler/compiler.cma
 	$(OCAMLC) -linkall -package str,findlib,ocp-indent.lib -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
