Improve compilation-time by minimize the number of files given to camplp4

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -58,13 +58,19 @@ compiler_version.ml: ../VERSION
 
 
 %.cmx: %.ml
+	ocamlfind ocamlopt -package findlib,str -for-pack Compiler -c $<
+
+instr.cmx: instr.ml
 	ocamlfind ocamlopt -package findlib,str,optcomp -syntax camlp4o -for-pack Compiler -c $<
 
 %.cmo: %.ml
+	ocamlfind ocamlc -package findlib,str -c $<
+
+instr.cmo: instr.ml
 	ocamlfind ocamlc -package findlib,str,optcomp -syntax camlp4o -c $<
 
 %.cmi: %.mli
-	ocamlfind ocamlc -package findlib,str,optcomp -syntax camlp4o -c $<
+	ocamlfind ocamlc -package findlib,str -c $<
 
 %.ml %.mli: %.mly
 	menhir --explain $<
@@ -84,6 +90,7 @@ clean:
 
 .PHONY: depend
 depend: compiler_version.ml annot_lexer.ml js_lexer.ml js_parser.ml annot_parser.ml
-	ocamlfind ocamldep -syntax camlp4o -package optcomp *.ml *.mli > .depend
+	ocamlfind ocamldep -syntax camlp4o -package optcomp instr.ml > .depend
+	ocamlfind ocamldep $(patsubst instr.ml,,$(wildcard *.ml)) *.mli >> .depend
 
 include .depend
