Toplevel: support metaocaml

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -23,3 +23,5 @@ DLLEXT := .so
 DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
+
+METAOCAML := 0
