--- a/Makefile.conf
+++ b/Makefile.conf
@@ -25,3 +25,5 @@ DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
 METAOCAML := 0
+
+VERSION_GIT := $(shell git log -n1 --pretty=format:%h 2> /dev/null)
