--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,6 +1,6 @@
 FILES= 	mlString.js ieee_754.js int64.js md5.js marshal.js \
 	lexing.js parsing.js json.js bigarray.js unix.js \
-	stdlib.js io.js jslib.js jslib_js_of_ocaml.js \
+	stdlib.js io.js fs.js jslib.js jslib_js_of_ocaml.js \
 	internalMod.js gc.js
 
 runtime.js: $(FILES)
