--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ toplevel/server
 examples/wiki/wikicreole.ml
 examples/*/*.js
 compiler/js_of_ocaml
-compiler/joo_minify
+compiler/jsoo_minify
 compiler/js_lexer.ml
 compiler/js_parser.ml
 compiler/js_parser.mli
