--- a/Makefile.conf
+++ b/Makefile.conf
@@ -7,7 +7,7 @@ BINDIR := /usr/local/bin
 LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
-MINIFIER := joo_minify$(EXEEXT)
+MINIFIER := jsoo_minify$(EXEEXT)
 # opt/byte
 BEST := opt
 
