LIB: initial support for Graphics + Runtime
filelist

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -20,7 +20,9 @@ DLLEXT := .so
 
 ### Optional dependencies: deriving
 
-DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
+WITH_DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
+
+WITH_GRAPHICS := $(shell ocamlfind query graphics 2> /dev/null)
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
