--- a/Makefile.conf
+++ b/Makefile.conf
@@ -26,6 +26,6 @@ WITH_GRAPHICS := $(shell ocamlfind query graphics 2> /dev/null)
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
-METAOCAML := 0
+METAOCAML ?= 0
 
 VERSION_GIT := $(shell git log -n1 --pretty=format:%h 2> /dev/null)
