Examples: graph_viewer

--- a/examples/graph_viewer/Makefile
+++ b/examples/graph_viewer/Makefile
@@ -1,5 +1,6 @@
 OBJS=scene.cmo viewer_common.cmo viewer_js.cmo
 NAME=jsviewer
+OPTIONS=-I ../../examples/graph_viewer -file scene.json:/
 
 include ../Makefile.common
 include .depend
