--- a/doc/Makefile
+++ b/doc/Makefile
@@ -22,21 +22,27 @@ api-wiki/index.wiki: ${MLIS} api-index
 	   ${MLIS}
 
 EX_TOPLEVEL:=index.html toplevel.js
-EX_BOULDER:=index.html boulderdash.js maps.txt maps sprites
-EX_WEBGL:=index.html webgldemo.js monkey.model
-EX_GRAPH:=index.html scene.json jsviewer.js
+EX_BOULDER:=index.html boulderdash.js sprites
+EX_WEBGL:=index.html webgldemo.js
+EX_GRAPH:=index.html jsviewer.js
 EX_PLANET:=index.html texture.jpg planet.js
 EX_WIKI:=index.html wiki.js
 EX_WYSIWYG:=index.html wiki.js
+EX_HYPER:=index.html hypertree.js icons
+EX_MINE:=index.html minesweeper.js sprites
+EX_CUBE:=index.html cubes.js
 
 cp-examples:
 	cp -R ${addprefix ../toplevel/, ${EX_TOPLEVEL}} manual-aux/toplevel/
 	cp -R ${addprefix ../examples/boulderdash/, ${EX_BOULDER}} manual-aux/boulderdash/
 	cp -R ${addprefix ../examples/webgl/, ${EX_WEBGL}} manual-aux/webgl/
-	cp -R ${addprefix ../examples/graph_viewer/, ${EX_GRAPH}} manual-aux/graph/
+	cp -R ${addprefix ../examples/graph_viewer/, ${EX_GRAPH}} manual-aux/graph_viewer/
 	cp -R ${addprefix ../examples/planet/, ${EX_PLANET}} manual-aux/planet/
 	cp -R ${addprefix ../examples/wiki/, ${EX_WIKI}} manual-aux/wiki/
 	cp -R ${addprefix ../examples/wysiwyg/, ${EX_WYSIWYG}} manual-aux/wysiwyg/
+	cp -R ${addprefix ../examples/minesweeper/, ${EX_MINE}} manual-aux/minesweeper/
+	cp -R ${addprefix ../examples/cubes/, ${EX_CUBE}} manual-aux/cubes/
+	cp -R ${addprefix ../examples/hyperbolic/, ${EX_HYPER}} manual-aux/hyperbolic/
 
 clean:
 	-rm -rf api-html/* api-wiki/*
