--- a/examples/boulderdash/Makefile
+++ b/examples/boulderdash/Makefile
@@ -1,8 +1,4 @@
 OBJS=boulderdash.cmo
 NAME=boulderdash
-OPTIONS=-I ../../examples/boulderdash/ -I ../../examples/boulderdash/maps \
-	-file maps.txt:/ \
-	-file level0.map:/maps -file level1.map:/maps \
-	-file level2.map:/maps -file level3.map:/maps \
-	-file level4.map:/maps
+OPTIONS=-I ../../examples/boulderdash/ -file maps.txt:/ -file maps:/
 include ../Makefile.common
