Lib: js_of_ocaml.tyxml
tyxml: part 2

update

asd

wip

More cast

fix tyxml

remove Obj.magic

clean Tyxml_cast

fix sigs

more Html5_types

latest tyxml

rename to tyxml_cast_sigs

latest tyxml

fix

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -27,6 +27,8 @@ WITH_DERIVING ?= $(shell if [ -f `ocamlfind query deriving 2> /dev/null`/derivin
 
 WITH_GRAPHICS ?= $(shell if [ -f `ocamlfind query graphics 2> /dev/null`/graphics.cmi ]; then echo YES; else echo NO; fi)
 
+WITH_TYXML ?= $(shell if [ -f `ocamlfind query tyxml 2> /dev/null`/tyxml_f.cma ]; then echo YES; else echo NO; fi)
+
 NATDYNLINK ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
 METAOCAML ?= 0
