--- a/Makefile.conf
+++ b/Makefile.conf
@@ -22,7 +22,7 @@ DLLEXT := .so
 
 WITH_DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
 
-WITH_GRAPHICS := $(shell ls `ocamlfind query graphics -predicates byte -format "%d/graphics.cmi"` 2> /dev/null)
+WITH_GRAPHICS := $(shell ocamlfind query graphics 2> /dev/null)
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
