--- a/doc/Makefile
+++ b/doc/Makefile
@@ -21,7 +21,7 @@ api-wiki/index.wiki: ${MLIS} api-index
 	   -i $(shell ocamlfind query wikidoc) -g odoc_wiki.cma \
 	   ${MLIS}
 
-EX_TOPLEVEL:=index.html toplevel.js
+EX_TOPLEVEL:=index.html toplevel.js toplevel-fs.js
 EX_BOULDER:=index.html boulderdash.js sprites
 EX_WEBGL:=index.html webgldemo.js
 EX_GRAPH:=index.html jsviewer.js
